--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,7 @@ input, textarea {
 .chat-box form {
   align-items: center;
   flex: 1;
-  padding: 10px 0px;
+  margin: 20px 40px 20px 40px;
 }
 
 .chat-box textarea {
@@ -118,7 +118,6 @@ input, textarea {
 .chat-box-input-container{
   max-height: 125px;
   border-radius: 15px;
-  margin: 0px 20px 0px 50px;
   overflow: hidden;
 }
 
@@ -126,7 +125,7 @@ input, textarea {
   border: none;
   background-color: transparent;
   cursor: pointer;
-  margin-right: 20px;
+  margin-left: 20px;
   width: 30px;
   height: 30px;
   background-image: url("../public/sendButton.png");
