--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   font-family: "ABeeZee", sans-serif;
 }
 
+p{
+  color: #424B54;
+}
+
 a {
   text-decoration: none;
 }
@@ -35,15 +39,15 @@ textarea {
   position: relative;
 }
 
-.navbar img {
+/* .navbar img {
   margin-left: 25px;
-}
+} */
 
 .navbar h1 {
   color: #fff;
   font-size: 17px;
   text-transform: uppercase;
-  margin-left: 15px;
+  margin-left: 22px;
   letter-spacing: 2px;
 }
 
@@ -137,10 +141,11 @@ textarea {
 
 .searchBar-container {
   border: none;
+  padding: 0px 15px;
 }
 
 .searchBar-container input {
-  width: 300px;
+  width: 100%;
   height: 40px;
   color: #424b54;
   border-radius: 25px;
@@ -148,8 +153,10 @@ textarea {
   padding: 15px 20px;
   font-size: 15px;
   background-color: #f4f5f6;
-  margin: 23px;
+  margin: 23px auto;
 }
+
+
 
 .left-sidebar-content {
   height: 100%;
@@ -161,17 +168,41 @@ textarea {
 
 /* Chat UI */
 .chat-container {
-  flex: 2;
+  flex: 4;
   text-align: center;
 }
 
+.chat-window-header{
+  align-items: center;
+  padding-left: 25px;
+}
+
+.chat-window-header div{
+  margin-left: 10px;
+  text-align: left;
+  line-height: 1.25;
+}
+
+.chat-window-header .user{
+  font-size: 16px;
+  font-weight: bold;
+  color: #424B54;
+}
+
+.chat-window-header .status{
+  font-size: 12px;
+  font-weight: bold;
+  color: #B5BBBF;
+
+}
+
+
 .chat-content {
-  box-shadow: inset 0px 0px 1.5px 0px;
+  box-shadow: inset 0px 0px 7px #424b5475;
 }
 
 .chat-box {
   border-top: 1px solid #424b54;
-
 }
 
 .chat-box form {
@@ -220,6 +251,22 @@ textarea {
 .right-sidebar-header {
   border-bottom: none;
 }
+
+.right-sidebar-content{
+  text-align: center;
+  margin-top: 23px;
+}
+
+.right-sidebar-content .user{
+  font-size: 16px;
+  margin-top: 10px;
+  margin-bottom: 2px;
+}
+
+.right-sidebar-content .user-joined{
+  font-size: 12px;
+}
+
 
 /* Login */
 
