--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,8 @@
   font-family: "ABeeZee", sans-serif;
 }
 
-p{
-  color: #424B54;
+p, h1{
+  color: #424b54;
 }
 
 a {
@@ -15,7 +15,7 @@ a {
 }
 
 input::-webkit-input-placeholder {
-  color: #A9B3BC;
+  color: #a9b3bc;
 }
 
 input,
@@ -49,9 +49,10 @@ textarea {
   text-transform: uppercase;
   margin-left: 22px;
   letter-spacing: 2px;
+  user-select: none;
 }
 
-.navbar h2{
+.navbar h2 {
   color: #fff;
   font-size: 17px;
   text-transform: capitalize;
@@ -120,7 +121,7 @@ textarea {
 /* Main Content */
 .main-content {
   height: 100%;
-  background-color: #E2E6E9;
+  background-color: #e2e6e9;
 }
 
 /* Left Sidebar */
@@ -129,6 +130,46 @@ textarea {
   height: 100%;
   border-right: #424b54 1px solid;
   flex: 1;
+}
+
+.left-sidebar-content {
+  height: 100%;
+  justify-content: center;
+  padding: 0px 15px;
+}
+
+.left-sidebar-content .conversation {
+  align-items: center;
+  height: 70px;
+  padding: 0px 10px;
+  border-radius: 10px;
+}
+
+.selected{
+  background: #CADEEB;
+}
+
+.left-sidebar-content img {
+  width: 45px;
+  height: 45px;
+  margin-right: 10px;
+}
+
+.left-sidebar-content span {
+  line-height: 18px;
+}
+
+.left-sidebar-content h1 {
+  font-size: 16px;
+}
+
+.left-sidebar-content p{
+  font-size: 12px;
+  color: #92989F;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 240px;
+  overflow: hidden;
 }
 
 .searchBar-container,
@@ -156,12 +197,6 @@ textarea {
   margin: 23px auto;
 }
 
-
-
-.left-sidebar-content {
-  height: 100%;
-}
-
 .searchBar-container input:focus {
   outline: none;
 }
@@ -172,30 +207,28 @@ textarea {
   text-align: center;
 }
 
-.chat-window-header{
+.chat-window-header {
   align-items: center;
   padding-left: 25px;
 }
 
-.chat-window-header div{
+.chat-window-header div {
   margin-left: 10px;
   text-align: left;
   line-height: 1.25;
 }
 
-.chat-window-header .user{
+.chat-window-header .user {
   font-size: 16px;
   font-weight: bold;
-  color: #424B54;
+  color: #424b54;
 }
 
-.chat-window-header .status{
+.chat-window-header .status {
   font-size: 12px;
   font-weight: bold;
-  color: #B5BBBF;
-
+  color: #b5bbbf;
 }
-
 
 .chat-content {
   box-shadow: inset 0px 0px 7px #424b5475;
@@ -252,21 +285,20 @@ textarea {
   border-bottom: none;
 }
 
-.right-sidebar-content{
+.right-sidebar-content {
   text-align: center;
   margin-top: 23px;
 }
 
-.right-sidebar-content .user{
+.right-sidebar-content .user {
   font-size: 16px;
   margin-top: 10px;
   margin-bottom: 2px;
 }
 
-.right-sidebar-content .user-joined{
+.right-sidebar-content .user-joined {
   font-size: 12px;
 }
-
 
 /* Login */
 
@@ -331,7 +363,7 @@ textarea {
   cursor: pointer;
 }
 
-.login-container .back-btn{
+.login-container .back-btn {
   position: absolute;
   bottom: 15px;
   left: 25px;
