--- a/src/index.css
+++ b/src/index.css
@@ -131,12 +131,14 @@ textarea {
   height: 100%;
   border-right: #424b546b 1px solid;
   flex: 1;
+  position: relative;
 }
 
 .left-sidebar-content {
   height: 100%;
   justify-content: center;
   padding: 0px 15px;
+  position: relative;
 }
 
 .left-sidebar-content .conversation {
@@ -222,6 +224,21 @@ textarea {
   position: absolute;
   top: 36px;
   left: 30px;
+}
+
+.search-results-container {
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  top: 62px;
+  padding: 0px 15px;
+}
+
+.search-results-card{
+  height: 50px;
+  width: 100%;
+  margin: 1px 0px;
+  border: 1px solid red
 }
 
 /* Chat UI */
