--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  /* font-family: "Roboto", sans-serif; */
-  font-family: "ABeeZee", sans-serif;
+  font-family: "Roboto", sans-serif;
+  /* font-family: "ABeeZee", sans-serif; */
 }
 
 p,
@@ -60,6 +60,10 @@ textarea {
   letter-spacing: 2px;
   position: absolute;
   right: 30px;
+}
+
+.navbar h2:hover{
+  text-decoration: underline;
 }
 
 /* Welcome Page */
@@ -158,7 +162,7 @@ textarea {
   input[type="radio"]
   + label
   div:hover:not(.left-sidebar-content input[type="radio"]:checked + label div) {
-  background: #e8eaee;
+  background: #424b540a;
 }
 
 .left-sidebar-content img {
@@ -212,6 +216,7 @@ textarea {
 .searchBar-container input:focus {
   outline: none;
   padding-left: 17px;
+  /* border-radius: 25px 25px 0 0; */
 }
 
 .searchBar-container input:focus + img {
@@ -227,18 +232,42 @@ textarea {
 }
 
 .search-results-container {
-  width: 100%;
+  width: calc(100% - 30px);
   position: absolute;
   z-index: 1;
-  top: 62px;
-  padding: 0px 15px;
+  top: 63px;
+  left: 15px;
+  background: #f4f5f6;
+  border-radius: 0 0 25px 25px;
+  overflow: hidden;
+  padding: 0 10px 5px 10px;
+  display: none;
+}
+
+
+.search-results-container div {
+  padding: 10px 10px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.search-results-container div:hover {
+  background: #424b540a;
 }
 
 .search-results-card{
-  height: 50px;
   width: 100%;
-  margin: 1px 0px;
-  border: 1px solid red
+  align-items: center;
+}
+
+.search-results-card img {
+  height: 30px;
+  width: 30px;
+}
+
+.search-results-card p {
+  font-size: 12px;
+  margin-left: 10px;
 }
 
 /* Chat UI */
