--- a/src/index.css
+++ b/src/index.css
@@ -241,12 +241,12 @@ textarea {
   border-radius: 0 0 25px 25px;
   overflow: hidden;
   padding: 0 10px 5px 10px;
-  display: none;
+  /* display: none; */
 }
 
 
 .search-results-container div {
-  padding: 10px 10px;
+  padding: 15px 10px;
   cursor: pointer;
   border-radius: 10px;
 }
