--- a/src/index.css
+++ b/src/index.css
@@ -303,6 +303,7 @@ textarea {
   box-shadow: inset 0px 0px 7px #424b5475;
   padding: 10px 10px;
   justify-content: flex-end;
+  position: relative;
 }
 
 .msg-container {
@@ -328,9 +329,14 @@ textarea {
   color: #f4f5f6;
 }
 
-/* .chat-box {
-  border-top: 1px solid #424b54;
-} */
+.chat-content h1{
+  top: 50%;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  color:#47aaeb;
+  font-size: 16px;
+}
 
 .chat-box form {
   align-items: center;
