--- a/src/index.css
+++ b/src/index.css
@@ -336,6 +336,11 @@ textarea {
   left: 0;
   color:#47aaeb;
   font-size: 16px;
+  cursor: pointer;
+}
+
+.chat-content h1:hover{
+  text-decoration: underline;
 }
 
 .chat-box form {
