--- a/src/index.css
+++ b/src/index.css
@@ -169,6 +169,7 @@ textarea {
   width: 45px;
   height: 45px;
   margin-right: 10px;
+  border-radius: 50%;
 }
 
 .left-sidebar-content span {
@@ -286,6 +287,12 @@ textarea {
   margin-left: 10px;
   text-align: left;
   line-height: 1.25;
+}
+
+.chat-window-header img{
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
 }
 
 .chat-window-header .user {
@@ -413,6 +420,12 @@ textarea {
 .right-sidebar-content {
   text-align: center;
   margin-top: 23px;
+}
+
+.right-sidebar-content img {
+  height: 100px;
+  width: 100px;
+  border-radius: 100%;
 }
 
 .right-sidebar-content .user {
